--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="live-times">
             <p>Current time: <strong id="currentTime">00:00</strong></p>
-            <p>Server online since: <strong id="upSince">00:00</strong></p>
+            <p>Server Created: Friday 12/4/25</p>
         </div>
 
         <div class="legend">
@@ -154,5 +154,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
